--- a/TaquillaITH/appsettings.json
+++ b/TaquillaITH/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=em16-server.database.windows.net;Database=taquilla-ith;User=adminem16;Password=taquillaith2019.;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=den1.mssql7.gear.host;Database=taquilla;User=taquilla;Password=.t4qu1ll4.;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
